--- a/package.json
+++ b/package.json
@@ -9,19 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.0.0-beta.35",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@stream-io/node-sdk": "^0.1.13",
+    "@stream-io/video-react-sdk": "^0.6.2",
+    "@types/uuid": "^9.0.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "css-loader": "^7.1.1",
+    "date-fns": "^3.4.0",
+    "lucide-react": "^0.365.0",
+    "next": "14.1.4",
     "react": "^18",
+    "react-datepicker": "^6.3.0",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "style-loader": "^4.0.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "typescript": "^5"
   }
 }
