--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@stream-io/node-sdk": "^0.1.13",
     "@stream-io/video-react-sdk": "^0.6.2",
     "@types/uuid": "^9.0.8",
+    "@webassemblyjs/helper-buffer": "^1.12.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "css-loader": "^7.1.1",
